@@ -193,6 +193,14 @@
                     </java>
                 </configuration>
             </plugin>
+	    <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+	    <version>3.3.0</version>
+            <configuration>
+                <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 
